[gd_scene format=3 uid="uid://do2tr6gyaoagk"]

[ext_resource type="Script" uid="uid://b86qb40xd126a" path="res://scripts/ui/LevelUpPanel.gd" id="1_rdsd0"]

[node name="LevelUpPanel" type="Control" unique_id=1981914241]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_rdsd0")

[node name="DimBackground" type="ColorRect" parent="." unique_id=180335710]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.78431374)

[node name="CenterContainer" type="CenterContainer" parent="." unique_id=1796827017]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="UpgradeContainer" type="VBoxContainer" parent="CenterContainer" unique_id=1493400242]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="CenterContainer/UpgradeContainer" unique_id=1359768194]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "\"LEVEL UP!\""
horizontal_alignment = 1

[node name="UpgradeButtonsContainer" type="HBoxContainer" parent="CenterContainer/UpgradeContainer" unique_id=529097432]
layout_mode = 2
theme_override_constants/separation = 20
